@@ -1,15 +1,0 @@
-#
-# Author: Martin Sandve Alnes
-# Date: 2009-03-31
-#
-
-element = FiniteElement("Lagrange", triangle, 1)
-
-v = TestFunction(element)
-u = TrialFunction(element)
-f = Coefficient(element)
-g = Coefficient(element)
-h = Coefficient(element)
-
-a = (u, v) + (grad(u), grad(v), dx(1)) + (-f, v) + (-g, v, ds(0)) + (h - u, v, ds(1))
-a, L = lhs(a), rhs(a)
