@@ -81,7 +81,7 @@ from ufl.algorithms.ad import expand_derivatives #, compute_diff, propagate_spat
 from ufl.algorithms.graph import Graph, format_graph, rebuild_tree, partition # TODO: Add more imports here
 
 # Utilities for tuple notation
-from ufl.algorithms.tuplenotation import tuple2form, as_form
+from ufl.algorithms.tuplenotation import as_form
 
 # Utilities for UFL object printing
 from ufl.algorithms.printing import integral_info, form_info, tree_format
